--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <text class="cls-3" transform="translate(29.35 119.29)">CubioStudio</text>
                             <text class="cls-6" transform="translate(27.35 194.29)">
                                 <tspan class="cls-7" x="0" y="0">Consultoria,</tspan>
-                                <tspan class="cls-7" x="173.74" y="0" xml:space="preserve">diseño gráfico</tspan>
+                                <tspan class="cls-7" x="173.74" y="0" xml:space="preserve">&nbsp;diseño gráfico</tspan>
                                 <tspan class="cls-10" x="0" y="40.8">&amp; desarrollo web.</tspan>
                             </text>
                         </g>
@@ -174,6 +174,14 @@
                         <p>
                             Empresa colombiana creada por una pareja de diseñadores gráficos, creyentes de que emprender no es difícil pero no es una tarea para todos.
                         </p>
+                        <div class="c-founders">
+                            <figure class="c-founders_this u-cubo">
+                                <img src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
+                            </figure>
+                            <figure class="c-founders_this u-cubo">
+                                <img src="./founders/founder_2.jpg" alt="Harley Santos Garzón" />
+                            </figure>
+                        </div>
                     </section>
                 </div>
             </section>
