update: ajuste fotos foundres

--- a/index.html
+++ b/index.html
@@ -176,10 +176,16 @@
                         </p>
                         <div class="c-founders">
                             <figure class="c-founders_this u-cubo">
-                                <img src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
+                                <div class="c-founders_this-info">
+                                    <img class="c-founders_this-photo" src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
+                                    <figcaption class="c-founders_this-caption">Harley Santos Garzón</figcaption>
+                                </div>
                             </figure>
                             <figure class="c-founders_this u-cubo">
-                                <img src="./founders/founder_2.jpg" alt="Harley Santos Garzón" />
+                                <div class="c-founders_this-info">
+                                    <img class="c-founders_this-photo" src="./founders/founder_2.jpg" alt="Ángela María Bohórquez Ramos" />
+                                    <figcaption class="c-founders_this-caption">Ángela María Bohórquez Ramos</figcaption>
+                                </div>
                             </figure>
                         </div>
                     </section>
