update: ajuste estilos grid founders

--- a/index.html
+++ b/index.html
@@ -169,26 +169,32 @@
             <section class="o-section u-middle u-headding" id="about">
                 <h2 class="u-head_section" data-name="Somos">Somos</h2>
                 <div class="o-wrapper">
-                    <section class="o-article c-aboutUs">
+                    <article class="o-article c-aboutUs">
                         <h3>Pasión</h3>
-                        <p>
+                        <p style="max-width: 800px;">
                             Empresa colombiana creada por una pareja de diseñadores gráficos, creyentes de que emprender no es difícil pero no es una tarea para todos.
                         </p>
-                        <div class="c-founders">
-                            <figure class="c-founders_this u-cubo">
-                                <div class="c-founders_this-info">
-                                    <img class="c-founders_this-photo" src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
-                                    <figcaption class="c-founders_this-caption">Harley Santos Garzón</figcaption>
-                                </div>
-                            </figure>
-                            <figure class="c-founders_this u-cubo">
-                                <div class="c-founders_this-info">
-                                    <img class="c-founders_this-photo" src="./founders/founder_2.jpg" alt="Ángela María Bohórquez Ramos" />
-                                    <figcaption class="c-founders_this-caption">Ángela María Bohórquez Ramos</figcaption>
-                                </div>
-                            </figure>
-                        </div>
-                    </section>
+                    </article>
+                    <article class="c-founders">
+                        <figure class="c-founders_this u-cubo">
+                            <div class="c-founders_this-info">
+                                <img class="c-founders_this-photo" src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
+                                <figcaption class="c-founders_this-caption">
+                                    <h4 class="c-founders_this-caption--title">Harley Santos Garzón</h4>
+                                    <span>Lorem ipsum dolor sit amet.</span>
+                                </figcaption>
+                            </div>
+                        </figure>
+                        <figure class="c-founders_this u-cubo">
+                            <div class="c-founders_this-info">
+                                <img class="c-founders_this-photo" src="./founders/founder_2.jpg" alt="Ángela María Bohórquez Ramos" />
+                                <figcaption class="c-founders_this-caption">
+                                    <h4 class="c-founders_this-caption--title">Ángela María Bohórquez Ramos</h4>
+                                    <span>Lorem ipsum dolor sit amet.</span>
+                                </figcaption>
+                            </div>
+                        </figure>
+                    </article>
                 </div>
             </section>
             <section class="o-section u-headding" id="contact">
