udpate: detalles de texto en html, cambio tamaño tipografía en html 16 -> 20px

--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
         <main id="app" class="o-main">
             <header class="o-header">
                 <button class="o-logo js-logo">
-                    <svg
-                        version="1.1"
-                        id="svg-logo"
-                        class="svg-logo"
-                        xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink"
-                        x="0px"
-                        y="0px"
-                        viewBox="0 0 57.2 52.7"
-                        style="enable-background:new 0 0 57.2 52.7;"
-                        xml:space="preserve"
-                    >
+                    <svg version="1.1" id="svg-logo" class="svg-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 57.2 52.7" style="enable-background:new 0 0 57.2 52.7;" xml:space="preserve">
                         <title>logo</title>
                         <g id="Capa_3">
                             <g>
@@ -88,14 +77,14 @@
                 <h2 class="u-head_section" data-name="Proyectos">Proyectos</h2>
             </section>
             <section class="o-section u-extra">
-                <div class="fx-mask js-mask" id="besknate" data-project="Besknate">
+                <div class="fx-mask js-mask" id="besknate" data-project="Betsknate">
                     <div class="product">
                         <figure class="photo">
                             <img src="./projects/bestksnate_1.png" alt="" />
                         </figure>
                         <div class="title">
                             <h2>
-                                <div><span>BESTKSNATE</span></div>
+                                <div><span>BESKNATE</span></div>
                                 <div><span>FESTIVAL</span></div>
                                 <div><span>DEL PERDÓN</span></div>
                             </h2>
@@ -181,7 +170,7 @@
                                 <img class="c-founders_this-photo" src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
                                 <figcaption class="c-founders_this-caption">
                                     <h4 class="c-founders_this-caption--title">Harley Santos Garzón</h4>
-                                    <span>Lorem ipsum dolor sit amet.</span>
+                                    <span>CTO - </span>
                                 </figcaption>
                             </div>
                         </figure>
@@ -190,7 +179,7 @@
                                 <img class="c-founders_this-photo" src="./founders/founder_2.jpg" alt="Ángela María Bohórquez Ramos" />
                                 <figcaption class="c-founders_this-caption">
                                     <h4 class="c-founders_this-caption--title">Ángela María Bohórquez Ramos</h4>
-                                    <span>Lorem ipsum dolor sit amet.</span>
+                                    <span>Dirección arte - Relaciones públicas.</span>
                                 </figcaption>
                             </div>
                         </figure>
@@ -201,7 +190,15 @@
                 <h2 class="u-head_section">Contacto</h2>
             </section>
             <footer class="o-footer  u-middle u-message">
-                somos
+                <div class="o-wrapper">
+                    <label for="">
+                        correo:
+                        <a href="mailto:harley.santos.garzon@gmail.com">cubiostudio@gmail.com</a>
+                    </label>
+                </div>
+                <div>
+                    <small>copy rights</small>
+                </div>
             </footer>
             <div class="mouse-tracker"></div>
         </main>
