update: revisión sección contacto, cambio id betsknate

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h2 class="u-head_section" data-name="Proyectos">Proyectos</h2>
             </section>
             <section class="o-section u-extra">
-                <div class="fx-mask js-mask" id="besknate" data-project="Betsknate">
+                <div class="fx-mask js-mask" id="betsknate" data-project="Betsknate">
                     <div class="product">
                         <figure class="photo">
                             <img src="./projects/bestksnate_1.png" alt="" />
@@ -170,7 +170,12 @@
                                 <img class="c-founders_this-photo" src="./founders/founder_1.jpeg" alt="Harley Santos Garzón" />
                                 <figcaption class="c-founders_this-caption">
                                     <h4 class="c-founders_this-caption--title">Harley Santos Garzón</h4>
-                                    <span>CTO - </span>
+                                    <span>CTO - Desarrollador frontend</span>
+                                    <div>
+                                        <small>
+                                            <a class="js-link" style="color: var(--color-a)" href="mailto:harley.santos.garzon@gmail.com">harley.garzon@cubiostudio.com</a>
+                                        </small>
+                                    </div>
                                 </figcaption>
                             </div>
                         </figure>
@@ -179,7 +184,12 @@
                                 <img class="c-founders_this-photo" src="./founders/founder_2.jpg" alt="Ángela María Bohórquez Ramos" />
                                 <figcaption class="c-founders_this-caption">
                                     <h4 class="c-founders_this-caption--title">Ángela María Bohórquez Ramos</h4>
-                                    <span>Dirección arte - Relaciones públicas.</span>
+                                    <span>Dirección arte.</span>
+                                    <div>
+                                        <small>
+                                            <a class="js-link" style="color: var(--color-a)" href="mailto:angela.bohorquez.ramos@gmail.com">angela.bohorquez@cubiostudio.com</a>
+                                        </small>
+                                    </div>
                                 </figcaption>
                             </div>
                         </figure>
@@ -190,14 +200,23 @@
                 <h2 class="u-head_section">Contacto</h2>
             </section>
             <footer class="o-footer  u-middle u-message">
-                <div class="o-wrapper">
-                    <label for="">
-                        correo:
-                        <a href="mailto:harley.santos.garzon@gmail.com">cubiostudio@gmail.com</a>
-                    </label>
+                <div class="o-wrapper" style="text-align: center">
+                    <div class="c-contact">
+                        <label for="">
+                            <a style="color: var(--color-a); margin-botton: 1rem" class="js-link" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a>
+                        </label>
+                        <!-- &nbsp; &nbsp; &nbsp; -->
+                        <label for="">
+                            <a style="color: var(--color-a)" class="js-link" href="tel:+350 5099 220">350 5099 220</a>
+                        </label>
+                        <hr style="width: 100%" />
+                        <label for="">
+                            Bogotá D.C, Colombia
+                        </label>
+                    </div>
                 </div>
                 <div>
-                    <small>copy rights</small>
+                    <small>&copy; 2019 cubio studio</small>
                 </div>
             </footer>
             <div class="mouse-tracker"></div>
