update: ajuste tag s into svg, titulo fundadores en sección about

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                         <p style="max-width: 800px;">
                             Empresa colombiana creada por una pareja de diseñadores gráficos, creyentes de que emprender no es difícil pero no es una tarea para todos.
                         </p>
+                        <div style="max-width: 800px;">
+                            <h2>Fundadores</h2>
+                        </div>
                     </article>
                     <article class="c-founders">
                         <figure class="c-founders_this u-cubo">
