udpate: ajustes revisión en #firefox

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </header>
             <section class="o-section u-headding">
                 <div class="c-main-title">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 784.24 252.94" class="svg-main_title">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 834.24 252.94" class="svg-main_title">
                         <title>headding</title>
                         <g id="Capa_3" data-name="Capa 3">
                             <path class="cls-1" d="M21.48,124.66h120.1V15.5H21.48Z" />
@@ -47,7 +47,7 @@
                             <text class="cls-3" transform="translate(29.35 119.29)">CubioStudio</text>
                             <text class="cls-6" transform="translate(27.35 194.29)">
                                 <tspan class="cls-7" x="0" y="0">Consultoria,</tspan>
-                                <tspan class="cls-7" x="173.74" y="0" xml:space="preserve">&nbsp;diseño gráfico</tspan>
+                                <tspan class="cls-7" x="185.74" y="0" xml:space="preserve">diseño gráfico</tspan>
                                 <tspan class="cls-10" x="0" y="40.8">&amp; desarrollo web.</tspan>
                             </text>
                         </g>
@@ -200,13 +200,13 @@
                 </div>
             </section>
             <section class="o-section u-headding" id="contact">
-                <h2 class="u-head_section">Contacto</h2>
+                <h2 class="u-head_section" data-name="Contacto">Contacto</h2>
             </section>
             <footer class="o-footer  u-middle u-message">
                 <div class="o-wrapper" style="text-align: center">
                     <div class="c-contact">
                         <label for="">
-                            <a style="color: var(--color-a); margin-botton: 1rem" class="js-link" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a>
+                            <a style="color: var(--color-a);" class="js-link" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a>
                         </label>
                         <!-- &nbsp; &nbsp; &nbsp; -->
                         <label for="">
