update: ajustes indicador de scroll

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </svg>
                 </button>
             </header>
-            <section class="o-section u-headding">
+            <section class="o-section u-headding" style="flex-direction: column; justify-content: space-around;">
                 <div class="c-main-title">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 834.24 252.94" class="svg-main_title">
                         <title>headding</title>
@@ -52,6 +52,11 @@
                             </text>
                         </g>
                     </svg>
+                </div>
+                <div class="container u-chevron">
+                    <div class="chevron u-chevron-arrow"></div>
+                    <div class="chevron u-chevron-arrow"></div>
+                    <div class="chevron u-chevron-arrow"></div>
                 </div>
             </section>
             <section class="o-section u-message" style="">
