update: #reFactor, avance portfolio v2, nuevos estilos, cambio de imágenes, ajuste funciones.

--- a/orca.html
+++ b/orca.html
@@ -39,6 +39,7 @@
                     </svg>
                 </button>
                 <ul class="o-menu_options">
+                    <li class="o-menu_options-item js-menu"> <a href="/index.html">home</a> </li>
                     <li class="o-menu_options-item js-menu"> <a href="/index.html#about">nosotros</a> </li>
                     <li class="o-menu_options-item js-menu"> <a href="/index.html#works">trabajos</a> </li>
                     <li class="o-menu_options-item js-menu"> <a href="/index.html#enfoque">enfoque</a> </li>
@@ -49,9 +50,9 @@
         <section class="o-section" data-theme='gray'>
             <div class="o-wrapper">
                 <h1 class="c-section_headding js-scrollUp">
-                    <small class="c-section_headding-indicator">Somos, un estudio de diseño Colombiano.</small>
+                    <small class="c-section_headding-indicator"></small>
                     <div class="c-section_headding-separador"></div><span
-                        class="c-section_headding-enfasis">Creamos</span> productos digitales y marcas del futuro.
+                        class="c-section_headding-enfasis">Proyecto</span> orca.
                 </h1>
             </div>
             <div class="container u-chevron">
@@ -60,146 +61,88 @@
                 <div class="chevron u-chevron-arrow"></div>
             </div>
             <div class="o-mega_headding-wrapper">
-                <div class="o-mega_headding js-mega_headding"> CubioStudio </div>
+                <div class="o-mega_headding js-mega_headding"> ProyectoOrca </div>
             </div>
         </section>
-        <section class="o-section js-scrollUp" data-theme='light' id="works">
-            <div class="o-wrapper">
-                <h2 class="c-section_headding js-scrollUp">
-                    <small class="c-section_headding-indicator">trabajos, desde 2015 haciendo realidad las ideas de
-                        nuestros clientes.</small>
-                    <div class="c-section_headding-separador"></div>
-                </h2>
-            </div>
-            <div class="o-wrapper">
-                <picture class="js-scrollUp js-link"><a href="orca.html"><img src="./images/projects/slider/1.png"
-                            alt=""></a></picture>
-            </div>
-        </section>
-        <section class="o-section js-scrollUp" data-theme='gold' id="enfoque">
-            <div class="o-wrapper">
-                <h2 class="c-section_headding js-scrollUp">
-                    <small class="c-section_headding-indicator">Enfoque, multiples servicios, 2 modalidades de
-                        trabajo</small>
-                    <div class="c-section_headding-separador"></div><span
-                        class="c-section_headding-enfasis">Impulsamos</span> transformaciones de la mano con el cliente.
-                </h2>
-                <article class="c-cards">
-                    <div class="c-cards_card u-cubo js-scrollUp">
-                        <div class="c-cards_card-info">
-                            <figcaption class="c-cards_card-caption">
-                                <h4 class="c-cards_card-title">Estrategia y consultoría</h4>
-                                <p>Trabajo cercano con el cliente para realizar análisis y definir diagnostico y plan de
-                                    acción.</p>
-                                <div>
-                                    <small>
-                                        <a class="js-link"
-                                            href="mailto:harley.santos.garzon@gmail.com">harley.garzon@cubiostudio.com</a>
-                                    </small>
-                                </div>
-                            </figcaption>
-                        </div>
+        <section class="o-section">
+            <div class="fx-mask js-mask" id="betsknate" data-project="Betsknate">
+                <div class="product">
+                    <figure class="photo">
+                        <img src="./images/projects/gallery/bestksnate_1.png" alt="" />
+                    </figure>
+                    <div class="title">
+                        <h2>
+                            <div><span>BESKNATE</span></div>
+                            <div><span>FESTIVAL</span></div>
+                            <div><span>DEL PERDÓN</span></div>
+                        </h2>
                     </div>
-                    <figure class="c-cards_card u-cubo js-scrollUp">
-                        <div class="c-cards_card-info">
-                            <img class="c-cards_card-photo" src="./images/founders/founder_2.jpg"
-                                alt="Ángela María Bohórquez Ramos" />
-                            <figcaption class="c-cards_card-caption">
-                                <h4 class="c-cards_card-caption--title">Ángela María Bohórquez Ramos</h4>
-                                <span>Dirección arte.</span>
-                                <div>
-                                    <small>
-                                        <a class="js-link"
-                                            href="mailto:angela.bohorquez.ramos@gmail.com">angela.bohorquez@cubiostudio.com</a>
-                                    </small>
-                                </div>
-                            </figcaption>
-                        </div>
+                </div>
+
+                <div class="product">
+                    <figure class="photo">
+                        <img src="./images/projects/gallery/bestksnate_2.png" alt="" />
                     </figure>
-                </article>
-            </div>
-            <!-- <h2 class="u-head_section" data-name="Proyectos">Proyectos</h2> -->
-        </section>
-        <section class="o-section js-scrollUp" id="about" data-theme='light'>
-            <div class="o-wrapper">
-                <h2 class="c-section_headding js-scrollUp">
-                    <small class="c-section_headding-indicator">Enfoque, multiples servicios, 2 modalidades de
-                        trabajo</small>
-                    <div class="c-section_headding-separador"></div><span
-                        class="c-section_headding-enfasis">Impulsamos</span> transformaciones de la mano con el cliente.
-                </h2>
-            </div>
-            <div class="o-wrapper">
-                <article class="o-article c-aboutUs">
-                    <h2>Pasión</h2>
-                    <p style="max-width: 800px;">
-                        Empresa colombiana creada por una pareja de diseñadores gráficos, creyentes de que emprender no
-                        es difícil pero no es una tarea para todos.
-                    </p>
-                    <div style="max-width: 800px;">
-                        <h2>Fundadores</h2>
+                    <div class="title">
+                        <h2>
+                            <div><span>APLICACIÓN</span></div>
+                            <div><span>MARKETING</span></div>
+                        </h2>
                     </div>
-                </article>
-                <article class="c-founders">
-                    <figure class="c-founders_this u-cubo js-scrollUp">
-                        <div class="c-founders_this-info">
-                            <img class="c-founders_this-photo" src="./images/founders/founder_1.jpeg"
-                                alt="Harley Santos Garzón" />
-                            <figcaption class="c-founders_this-caption">
-                                <h4 class="c-founders_this-caption--title">Harley Santos Garzón</h4>
-                                <span>CTO - Desarrollador frontend</span>
-                                <div>
-                                    <small>
-                                        <a class="js-link" style="color: var(--color-a)"
-                                            href="mailto:harley.santos.garzon@gmail.com">harley.garzon@cubiostudio.com</a>
-                                    </small>
-                                </div>
-                            </figcaption>
-                        </div>
+                </div>
+
+                <div class="product">
+                    <figure class="photo">
+                        <img src="./images/projects/gallery/bestksnate_3.png" alt="" />
                     </figure>
-                    <figure class="c-founders_this u-cubo js-scrollUp">
-                        <div class="c-founders_this-info">
-                            <img class="c-founders_this-photo" src="./images/founders/founder_2.jpg"
-                                alt="Ángela María Bohórquez Ramos" />
-                            <figcaption class="c-founders_this-caption">
-                                <h4 class="c-founders_this-caption--title">Ángela María Bohórquez Ramos</h4>
-                                <span>Dirección arte.</span>
-                                <div>
-                                    <small>
-                                        <a class="js-link" style="color: var(--color-a)"
-                                            href="mailto:angela.bohorquez.ramos@gmail.com">angela.bohorquez@cubiostudio.com</a>
-                                    </small>
-                                </div>
-                            </figcaption>
-                        </div>
-                    </figure>
-                </article>
-            </div>
-        </section>
-        <section class="o-section js-scrollUp" id="contact">
-            <h2 class="u-head_section" data-name="Contacto">Contacto</h2>
-        </section>
-        <footer class="o-footer">
-            <div class="o-wrapper" style="text-align: center">
-                <div class="c-contact">
-                    <label for="">
-                        <a style="color: var(--color-a);" class="js-link"
-                            href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a>
-                    </label>
-                    <!-- &nbsp; &nbsp; &nbsp; -->
-                    <label for="">
-                        <a style="color: var(--color-a)" class="js-link" href="tel:+350 5099 220">350 5099 220</a>
-                    </label>
-                    <hr style="width: 100%" />
-                    <label for="">
-                        Bogotá D.C, Colombia
-                    </label>
+                    <div class="title">
+                        <h2>
+                            <div><span>DESARROLLO</span></div>
+                            <div><span>DE MARCA</span></div>
+                        </h2>
+                    </div>
                 </div>
             </div>
-            <div>
-                <small>&copy; 2019 cubio studio</small>
+        </section>
+        <section class="o-section">
+            <div class="fx-mask js-mask" id="orca" data-project="Orca">
+                <div class="product">
+                    <figure class="photo">
+                        <img src="./images/projects/gallery/orca_1.png" alt="" />
+                    </figure>
+                    <div class="title">
+                        <h2>
+                            <div><span>PROYECTO</span></div>
+                            <div><span>ORCA</span></div>
+                        </h2>
+                    </div>
+                </div>
+
+                <div class="product">
+                    <figure class="photo">
+                        <img src="./images/projects/gallery/orca_2.png" alt="" />
+                    </figure>
+                    <div class="title">
+                        <h2>
+                            <div><span>DESARROLLO</span></div>
+                            <div><span>DE MARCA</span></div>
+                        </h2>
+                    </div>
+                </div>
+
+                <div class="product">
+                    <figure class="photo">
+                        <img src="./images/projects/gallery/orca_3.png" alt="" />
+                    </figure>
+                    <div class="title">
+                        <h2>
+                            <div><span>ESTRATEGIA DE</span></div>
+                            <div><span>COMUNICACIÓN</span></div>
+                        </h2>
+                    </div>
+                </div>
             </div>
-        </footer>
+        </section>
         <div class="mouse-tracker"></div>
     </main>
     <!-- partial -->
