update: links en header, link relativo a folder actual

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     </svg>
                 </button>
                 <ul class="o-menu_options">
-                    <li class="o-menu_options-item js-menu"> <a href="/index.html#about">nosotros</a> </li>
-                    <li class="o-menu_options-item js-menu"> <a href="/index.html#works">trabajos</a> </li>
-                    <li class="o-menu_options-item js-menu"> <a href="/index.html#enfoque">enfoque</a> </li>
-                    <li class="o-menu_options-item js-menu"> <a href="/index.html#contact">contacto</a> </li>
+                    <li class="o-menu_options-item js-menu"> <a href="./index.html#about">nosotros</a> </li>
+                    <li class="o-menu_options-item js-menu"> <a href="./index.html#works">trabajos</a> </li>
+                    <li class="o-menu_options-item js-menu"> <a href="./index.html#enfoque">enfoque</a> </li>
+                    <li class="o-menu_options-item js-menu"> <a href="./index.html#contact">contacto</a> </li>
                 </ul>
             </nav>
         </header>
