--- a/orca.html
+++ b/orca.html
@@ -37,11 +37,11 @@
               </svg>
             </button>
             <ul class="o-menu_options">
-              <li class="o-menu_options-item js-menu"><a href="./">inicio</a></li>
-              <li class="o-menu_options-item js-menu"><a href="#about">nosotros</a></li>
-              <li class="o-menu_options-item js-menu"><a href="#works">trabajos</a></li>
-              <li class="o-menu_options-item js-menu"><a href="#enfoque">enfoque</a></li>
-              <li class="o-menu_options-item js-menu"><a href="#contact">contacto</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="./">inicio</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#about">nosotros</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#works">trabajos</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#enfoque">enfoque</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#contact">contacto</a></li>
             </ul>
           </nav>
         </div>
