--- a/orca.html
+++ b/orca.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main class="o-main on-orca" id="app">
-      <header class="o-header">
+      <header class="o-header" id="js_o_header">
         <div class="o-header_wrapper">
           <button class="o-header_btn o-logo js-logo">
             <svg class="svg-logo" id="svg-logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 57.2 52.7" style="enable-background:new 0 0 57.2 52.7;" xml:space="preserve">
@@ -65,14 +65,16 @@
       </section>
       <section class="o-section" data-theme="gold" id="record"></section>
       
-      <div class="o-wrapper">
-        <div class="c-contact_footer">
-          <label for=""><a class="js-link" style="color: var(--color-a);" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a></label>
-          <label for=""><a class="js-link" style="color: var(--color-a)" href="tel:+350 5099 220">350 5099 220</a></label>
-          <hr style="width: 100%"/>
-          <label for="">Bogotá D.C, Colombia</label><small>&copy; 2019 cubio studio</small>
+      <footer class="o-footer">
+        <div class="o-wrapper">
+          <div class="c-contact_footer">
+            <label for=""><a class="js-link" style="color: var(--color-a);" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a></label>
+            <label for=""><a class="js-link" style="color: var(--color-a)" href="tel:+350 5099 220">350 5099 220</a></label>
+            <hr style="width: 100%"/>
+            <label for="">Bogotá D.C, Colombia</label><small>&copy; 2019 cubio studio</small>
+          </div>
         </div>
-      </div>
+      </footer>
     </main>
     <div class="mouse-tracker"></div>
     
